--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     "start": "node dist/server/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.7.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
-    "socket.io": "^4.6.1",
-    "dotenv": "^16.3.1",
-    "@prisma/client": "^5.7.1"
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
-    "@types/passport": "^1.0.16",
     "@types/node": "^20.10.6",
+    "@types/passport": "^1.0.16",
+    "@types/passport-discord": "^0.1.15",
+    "concurrently": "^8.2.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "concurrently": "^8.2.2"
+    "typescript": "^5.3.3"
   }
 }
-
