--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev:server": "tsx watch server/index.ts",
     "dev:client": "cd client && npm run dev",
     "build": "npm run build:server && npm run build:client",
-    "build:server": "tsc -p server/tsconfig.json",
+    "build:server": "prisma generate && tsc -p server/tsconfig.json",
     "build:client": "cd client && npm run build",
-    "start": "node dist/server/index.js"
+    "start": "node dist/server/index.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
@@ -29,6 +30,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-discord": "^0.1.15",
     "concurrently": "^8.2.2",
+    "prisma": "^5.7.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
