--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "build:server": "prisma generate && tsc -p server/tsconfig.json",
     "build:client": "npm run build --prefix ./client",
     "start": "node dist/server/index.js",
-    "postinstall": "prisma generate && npm install --prefix ./client --include=dev"
+    "postinstall": "node scripts/postinstall.js"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "redis": "^4.6.13",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
@@ -29,6 +33,8 @@
     "@types/node": "^20.10.6",
     "@types/passport": "^1.0.16",
     "@types/passport-discord": "^0.1.15",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/csurf": "^1.11.2",
     "concurrently": "^8.2.2",
     "prisma": "^5.7.1",
     "tsx": "^4.7.0",
